--- a/libs/core/pom.xml
+++ b/libs/core/pom.xml
@@ -116,6 +116,10 @@
             <artifactId>rtree</artifactId>
             <version>0.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.11</artifactId>
+        </dependency>
 
     </dependencies>
 
