--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.json4s</groupId>
+                <artifactId>json4s-native_2.11</artifactId>
+                <version>3.4.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.21</version>
