--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -13,5 +13,6 @@
     <modules>
         <module>core</module>
         <module>h2</module>
+        <module>geotools</module>
     </modules>
 </project>
