--- a/libs/geotools/pom.xml
+++ b/libs/geotools/pom.xml
@@ -86,6 +86,11 @@
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${gt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
             <artifactId>gt-epsg-wkt</artifactId>
             <version>${gt.version}</version>
         </dependency>
