--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>osgi6-geoserver</groupId>
     <artifactId>osgi6-geoserver</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -329,7 +329,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/maprohu/osgi6-geoserver.git</developerConnection>
-        <tag>osgi6-geoserver-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
