--- a/libs/geotools/pom.xml
+++ b/libs/geotools/pom.xml
@@ -34,46 +34,46 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <scope>provided</scope>
-            <version>5.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-sbt</groupId>
-            <artifactId>io_2.11</artifactId>
-            <version>1.0.0-M3</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-xml_2.11</artifactId>
-            <version>1.0.5</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.osgi</groupId>-->
+            <!--<artifactId>org.osgi.core</artifactId>-->
+            <!--<scope>provided</scope>-->
+            <!--<version>5.0.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.scala-sbt</groupId>-->
+            <!--<artifactId>io_2.11</artifactId>-->
+            <!--<version>1.0.0-M3</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>javax.servlet</groupId>-->
+            <!--<artifactId>servlet-api</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.scala-lang.modules</groupId>-->
+            <!--<artifactId>scala-xml_2.11</artifactId>-->
+            <!--<version>1.0.5</version>-->
+        <!--</dependency>-->
 
 
-        <dependency>
-            <groupId>osgi6</groupId>
-            <artifactId>osgi6-multi-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>osgi6</groupId>
-            <artifactId>osgi6-actor</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>osgi6</groupId>
-            <artifactId>osgi6-lib-multi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.json4s</groupId>
-            <artifactId>json4s-native_2.11</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>osgi6</groupId>-->
+            <!--<artifactId>osgi6-multi-api</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>osgi6</groupId>-->
+            <!--<artifactId>osgi6-actor</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>osgi6</groupId>-->
+            <!--<artifactId>osgi6-lib-multi</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.json4s</groupId>-->
+            <!--<artifactId>json4s-native_2.11</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-render</artifactId>
@@ -111,15 +111,15 @@
             <version>1.7.12</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>osgi6</groupId>
-            <artifactId>osgi6-akka-http-multi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>scalatags_2.11</artifactId>
-            <version>0.6.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>osgi6</groupId>-->
+            <!--<artifactId>osgi6-akka-http-multi</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.lihaoyi</groupId>-->
+            <!--<artifactId>scalatags_2.11</artifactId>-->
+            <!--<version>0.6.0</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
