--- a/libs/h2/pom.xml
+++ b/libs/h2/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>osgi6-geoserver</groupId>
         <artifactId>osgi6-geoserver-libs</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <artifactId>osgi6-geoserver-h2</artifactId>
     <packaging>jar</packaging>
