--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -13,6 +13,6 @@
     <modules>
         <!--<module>core</module>-->
         <module>geotools</module>
-        <module>h2</module>
+        <!--<module>h2</module>-->
     </modules>
 </project>
