--- a/libs/geotools/pom.xml
+++ b/libs/geotools/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>osgi6-geoserver</groupId>
         <artifactId>osgi6-geoserver-libs</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <artifactId>osgi6-geoserver-geotools</artifactId>
     <packaging>jar</packaging>
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>osgi6-geoserver</groupId>
             <artifactId>osgi6-geoserver-h2</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
